--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <a href="">
-        <img src="full stack certificate.jpeg" alt="No img" >
+        <img src="FullStackCertificate.jpeg" alt="No img" >
     </a>
 </body>
 </html>
